--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -16,7 +16,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macOS-latest]
         node-version: [16]
-        build-version: [1.27.0, 1.30.0, 1.35.0, 1.40.0, 1.45.0, 1.50.0, stable, insiders]
+        build-version: [1.31.0, 1.32.0, 1.33.0, 1.34.0, 1.35.0, 1.36.0, 1.37.0, 1.38.0, 1.39.0, 1.40.0, stable, insiders]
 
     steps:
 
